[package]
name = "ht_mod_tool"
version = "1.0.0"
description = "A tool for creating Hardware Tycoon mods"
authors = ["Haxor"]
default-run = "ht_mod_tool"
edition = "2021"
rust-version = "1.60"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.0", features = [ "dialog-save", "shell-open", "dialog-open", "fs-read-dir", "fs-exists", "fs-read-file", "fs-write-file"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
